Fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 /* Base height for smaller screens */
 
 width: 300px; 
-height: 50px; 
+
+height: 40px; 
 object-fit: cover;
 object-position: 50% 50%; 
 }
